fix: hide overflow so scrollbars are disabled

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ p {
 
 #canvas {
   white-space: pre;
+  overflow: hidden;
 }
 
 /* Credit modified solarized themes: http://thomasf.github.io/solarized-css/ */
